--- a/web/fire.html
+++ b/web/fire.html
@@ -14,29 +14,29 @@
         <script src="anime.js"></script>
         <p style="color: 0xffffff">
           x
-          <input type="range" oninput="adjust()" id="cx" value="200" min="-100" max="200"/>
+          <input type="range" oninput="adjust(0)" id="cx" value="200" min="-100" max="200"/>
           <span id="cxValue">200</span>
           y
-          <input type="range" oninput="adjust()" id="cy" value="20" min="-100" max="200"/>
+          <input type="range" oninput="adjust(0)" id="cy" value="20" min="-100" max="200"/>
           <span id="cyValue">20</span>
           z
-          <input type="range" oninput="adjust()" id="cz" value="200" min="-100" max="200"/>
+          <input type="range" oninput="adjust(0)" id="cz" value="200" min="-100" max="200"/>
           <span id="czValue">200</span>
           Enx
-          <input type="range" oninput="adjust()" id="cenx" value="10" min="1" max="50"/>
+          <input type="range" oninput="adjust(1)" id="cenx" value="10" min="1" max="50"/>
           <span id="cenxValue">10</span>
           Eny
-          <input type="range" oninput="adjust()" id="ceny" value="10" min="1" max="50"/>
+          <input type="range" oninput="adjust(1)" id="ceny" value="10" min="1" max="50"/>
           <span id="cenyValue">10</span>
           Hex
-          <input type="range" oninput="adjust()" id="chex" value="0.1" min="0.1" max="10" step="0.1"/>
+          <input type="range" oninput="adjust(1)" id="chex" value="0.1" min="0.1" max="10" step="0.1"/>
           <span id="chexValue">0.1</span>
           Hey
-          <input type="range" oninput="adjust()" id="chey" value="0.1" min="0.1" max="10" step="0.1"/>
+          <input type="range" oninput="adjust(1)" id="chey" value="0.1" min="0.1" max="10" step="0.1"/>
           <span id="cheyValue">0.1</span>
         </p>
         <script>
-        function adjust() {
+        function adjust(adjType) {
           var adjv = ['x', 'y', 'z', 'enx', 'eny', 'hex', 'hey'];
           var values = [];
           for (var i = 0; i < adjv.length; i++) {
@@ -46,8 +46,11 @@
             values.push(value);
             document.getElementById(valueName).innerHTML = value;
           }
-          setCameraPos(values[0], values[1], values[2]);
-          eehh(values[3], values[4], values[5], values[6]);
+          if(adjType == 0) {
+            setCameraPos(values[0], values[1], values[2]);
+          } else {
+            eehh(values[3], values[4], values[5], values[6]);
+          }
         }
 
         adjust();
