--- a/web/fire.html
+++ b/web/fire.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8>
-        <title>My first three.js app</title>
+        <title>基于云模型的火焰粒子特效 </title>
         <style>
             body { margin: 0; }
             canvas { width: 100%; height: 100% }
