hotfix control pad

--- a/web/fire.html
+++ b/web/fire.html
@@ -16,7 +16,7 @@
             <center>
                 <p>
                     粒子数量
-                    <input type="text" onchange="setParticleCount" value="3000"/>
+                    <input type="text" onkeyup="setParticleCount" value="3000"/>
                 </p>
                 <p>
                     相机位置x
