--- a/web/fire.html
+++ b/web/fire.html
@@ -14,45 +14,55 @@
         <script src="anime.js"></script>
         <div style="color: 0xffffff">
             <center>
+                <p>全局设置:  </p>
                 <p>
                     粒子数量
-                    <input type="text" onkeyup="setParticleCount(this.value)" value="3000"/>
-                </p>
-                <p>
+                    <input type="text" onkeyup="setParticleCount(this.value)" value="2000"/>
                     相机高度
                     <input type="range" oninput="adjust(0)" id="cy" value="20" min="-400" max="400"/>
                     <span id="cyValue">20</span>
-                </p>
-                <p>
                     相机旋转
                     <input type="range" oninput="adjust(0)" id="cz" value="0" min="-1" max="1" step="0.01"/>
                     <span id="czValue">0</span>
                 </p>
+                <p>火焰初始位置和速度二维云模型参数:</p>
                 <p>
                     Enx
                     <input type="range" oninput="adjust(1)" id="cenx" value="10" min="1" max="50"/>
                     <span id="cenxValue">10</span>
-                </p>
-                <p>
                     Eny
                     <input type="range" oninput="adjust(1)" id="ceny" value="10" min="1" max="50"/>
                     <span id="cenyValue">10</span>
-                </p>
-                <p>
                     Hex
                     <input type="range" oninput="adjust(1)" id="chex" value="0.1" min="0.1" max="10" step="0.1"/>
                     <span id="chexValue">0.1</span>
-                </p>
-                <p>
                     Hey
                     <input type="range" oninput="adjust(1)" id="chey" value="0.1" min="0.1" max="10" step="0.1"/>
                     <span id="cheyValue">0.1</span>
+                </p>
+                <p>火焰上升速度云模型:</p>
+                <p>
+                    Enx
+                    <input type="range" oninput="adjust(1)" id="cenxd" value="0.5" min="0" max="5" step="0.1"/>
+                    <span id="cenxdValue">10</span>
+                    Hex
+                    <input type="range" oninput="adjust(1)" id="chexd" value="0.1" min="0" max="5" step="0.1"/>
+                    <span id="chexdValue">0.1</span>
+                </p>
+                <p>火焰寿命云模型:</p>
+                <p>
+                    Enx
+                    <input type="range" oninput="adjust(1)" id="cenxr" value="0.5" min="0" max="5"/>
+                    <span id="cenxrValue">10</span>
+                    Hex
+                    <input type="range" oninput="adjust(1)" id="chexr" value="0.1" min="0" max="5" step="0.1"/>
+                    <span id="chexrValue">0.1</span>
                 </p>
             </center>
         </div>
         <script>
             function adjust(adjType) {
-                var adjv = ['x', 'y', 'z', 'enx', 'eny', 'hex', 'hey'];
+                var adjv = ['x', 'y', 'z', 'enx', 'eny', 'hex', 'hey', 'enxd', 'hexd', 'enxr', 'hexr'];
                 var values = [0];
                 for (var i = 1; i < adjv.length; i++) {
                     var name = 'c' + adjv[i];
@@ -64,7 +74,7 @@
                 if(adjType == 0) {
                     setCameraPos(values[0], values[1], values[2]);
                 } else {
-                    eehh(values[3], values[4], values[5], values[6]);
+                    eehh(values.slice(3));
                 }
             }
 
